--- a/app/package.json
+++ b/app/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-virtual": "^3.13.18",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.12.0"
+    "react-router-dom": "^7.12.0",
+    "swr": "^2.3.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
