feat: enhance deployment workflow by adding presentation build and copy steps, and update Vite config for correct base path

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,17 @@ jobs:
         run: pnpm build
         working-directory: app
 
+      - name: Install dependencies for presentation
+        run: pnpm install
+        working-directory: calendar-countdown-presentation
+
+      - name: Build presentation
+        run: pnpm build
+        working-directory: calendar-countdown-presentation
+
+      - name: Copy presentation to app
+        run: cp -r calendar-countdown-presentation/dist app/dist/presentation
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
